# harm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  newTemplateEval.cc
src/antlr4/bdtLimitsParser/grammar/: CMakeLists.txt  limits.interp  limitsLexer.interp  limitsLexer.tokens
src/antlr4/bdtLimitsParser/handler/: CMakeLists.txt
src/antlr4/dtLimitsParser/grammar/: CMakeLists.txt  limits.g4  limits.interp  limitsLexer.interp
src/antlr4/dtLimitsParser/handler/: CMakeLists.txt
src/antlr4/metricParser/grammar/: CMakeLists.txt  metric.g4  metric.interp  metricLexer.interp  metricLexer.tokens
src/antlr4/metricParser/handler/: CMakeLists.txt
src/antlr4/propositionParser/grammar/: CMakeLists.txt  genParser.sh  proposition.g4  proposition.interp  proposition.tokens  propositionLexer.interp
src/antlr4/propositionParser/handler/: CMakeLists.txt
src/antlr4/templateParser/: CMakeLists.txt  setUpFiles.sh  templateParser.hh
src/antlr4/templateParser/grammarSVA/: CMakeLists.txt  sva.g4  sva.interp  svaLexer.interp  svaLexer.tokens  temporalSVA.interp  temporalSVA.tokens  temporalSVALexer.interp  temporalSVALexer.tokens
src/antlr4/templateParser/grammarSpot/: CMakeLists.txt  genParser.sh  spot.g4  spot.interp  spot.tokens  spotLexer.interp  spotLexer.tokens
src/antlr4/templateParser/handler/: CMakeLists.txt
src/antlr4/temporalParser/grammarTemporal/: CMakeLists.txt  genParser.sh  temporal.g4  temporal.interp  temporal.tokens  temporalLexer.interp  temporalLexer.tokens
src/antlr4/temporalParser/handler/: CMakeLists.txt
src/antlr4/varDeclarationParser/grammar/: CMakeLists.txt  genParser.sh  varDeclaration.g4  varDeclaration.interp  varDeclaration.tokens  varDeclarationLexer.interp  varDeclarationLexer.tokens
src/antlr4/varDeclarationParser/handler/: CMakeLists.txt
src/clustering/: CMakeLists.txt
src/clustering/include/: ClsOp.hh  Clustering.hh  ClusteringConfig.hh  Contiguous.hh  Contiguous.i.hh  Hierarchical.hh  Hierarchical.i.hh  KDE.hh  KDE.i.hh  Kmeans.hh  Kmeans.i.hh  dkm.hpp  utils.hh
src/clustering/src/: Clustering.cc  Hierarchical.cc  KDE.cc  Kmeans.cc
src/ddd/: CMakeLists.txt
src/ddd/include/: ddd.hh
src/ddd/src/: ddd.cc
src/dea/: .gitignore  CMakeLists.txt  README.md  main.cc
src/dea/dea_benchmarks/: .gitignore  README.md  envSetup.source
src/dea/dea_benchmarks/dafir/: run.sh  sf.gtkw  traceToAss.sh
src/dea/dea_benchmarks/ffnn/: run.sh
src/dea/dea_benchmarks/fft/: run.sh  testFault.txt
src/dea/dea_benchmarks/fir/: run.sh  sf.gtkw  traceToAss.sh
src/dea/dea_benchmarks/gauss_blur/: faultList.txt  run.sh  sf.gtkw
src/dea/dea_benchmarks/imsharp/: run.sh  sf.gtkw  testFault.txt
src/dea/dea_benchmarks/support/: checkCorrelation.py  daToDea.py  runDA.sh  runDEA.py  runDEAFromCSV.sh  run_corr.sh  run_cs_deepApprox_bench.sh
src/dea/include/: Individual.hh  NSGA2.hh  NSGA2_utils.hh  dea.hh  evaluator.hh  utils.hh
src/dea/src/: NSGA2.cc  dea.cc  evaluator.cc
src/exp/: CMakeLists.txt
src/exp/include/: exp.hh
src/exp/include/classes/: classes.hh
src/exp/include/expUtils/: ExpType.hh  PrintMode.hh  VarType.hh  cConversion.hh  expUtils.hh  implicitConversion.hh  ope.hh
src/exp/include/formula/: formula.hh
src/exp/include/visitors/: ColoredPrinterVisitor.hh  CopyVisitor.hh  CounterVisitor.hh  ExpToZ3Visitor.hh  ExpVisitor.hh  PrinterVisitor.hh  TraceChangerVisitor.hh  VarExtractVisitor.hh  visitorExpList.hh  visitors.hh
src/exp/src/expUtils/: expUtils.cc
src/exp/src/visitors/: ColoredPrinterVisitor.cc  CopyVisitor.cc  CounterVisitor.cc  (+6 more)
src/fort/: CMakeLists.txt
src/fort/include/: fort.h  fort.hpp
src/fort/src/: fort.c
src/globals/: CMakeLists.txt
src/globals/include/: globals.hh
src/globals/src/: globals.cc
src/miner/: CMakeLists.txt
src/miner/modules/: CMakeLists.txt
src/miner/utils/: CMakeLists.txt
src/paal/: CMakeLists.txt  set_cover_example.cpp
src/paal/data_structures/: bimap.hpp  combine_iterator.hpp  cycle_iterator.hpp  fraction.hpp  mapped_file.hpp  subset_iterator.hpp  ublas_traits.hpp  vertex_to_edge_iterator.hpp
src/paal/set_cover/: budgeted_maximum_coverage.hpp  maximum_coverage.hpp  set_cover.hpp  set_cover_wrapper.cpp  set_cover_wrapper.hh
src/paal/utils/: accumulate_functors.hpp  contract_bgl_adjacency_matrix.hpp  functors.hpp  fusion_algorithms.hpp  iterator_with_stop_condition.hpp  knapsack_utils.hpp  log_loss.hpp  make.hpp  property_map.hpp  read_rows.hpp  read_svm.hpp  rotate.hpp
tests/: CMakeLists.txt  clsTests.cc  constantsTests.cc  conversionTests.cc  domainTests.cc  dtoTests.cc  editTests.cc  evalTests.cc  gtests.cc  harmLinearVsQuadraticAutomatonEvalTests.cc  logicTests.cc  mmaTests.cc  opeTests.cc  perfTests.cc  permutatorTests.cc  setCovTests.cc  svaParserPrinterTests.cc  tempExpSyntaxTreeTests.cc  temporalDepthTests.cc  temporalExpressionTests.cc  traceTests.cc
tests/bl_master/: bl_master1k.vcd  bl_masterConfig.xml
tests/camellia/: camellia.vcd  camellia.xml
tests/csvCheck/: csvCheckConfig.xml  harm_test_data.csv
tests/faultCov/: fc.csv  fcConfig.xml
tests/faultCov/faultyTraces/: ft6.csv
tests/fsmSVT/: fsm.vcd  fsm.xml
tests/gTestsTB/nextAnd/: nextAnd_t1.xml  nextAnd_t2.xml  nextAnd_t3.vcd  nextAnd_t3.xml  nextAnd_t5.xml
tests/input/: BasicTypes.csv  BasicTypes.vcd  EvalTest_RandomTrace.csv  EvalTest_t1.csv  LogicTrace.csv  MMA_Trace.csv  RandomTrace.csv  RandomTraceSparse.csv  SignedTypes.vcd  TraceTest_t1.csv  fuzzedTemporalFormulas.txt
tests/input/multitraceWithReset/: t1.csv  t2.csv
tests/input/nextAnd/: nextAnd_t1.csv  nextAnd_t3.xml  nextAnd_t5.xml
tests/input/parser/: trace.csv
tests/multiTrace/: multiTrace.xml
tests/multiTrace/csv/: counter2.csv  counter4.csv  counter5.csv
tests/ncReps/: ncReps.csv  ncRepsConfig.xml
tests/nonBoolBDT/: nonBooleanBDT.xml
tests/nonBoolDT/: nonBooleanDT.csv
tests/paperRE/: re.csv  reConfig.xml
tests/paperRE/faultyTraces/: ft1.csv  ft3.csv  ft4.csv  ft5.csv  ft6.csv
tests/sub_platform/: sub_platform.xml
tests/vendingMachine/: vendingMachine.vcd  vendingMachineConfig.xml
(+793 files in other folders)
